--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
+venv/
+env/
+.venv/
+
+# Python cache
+__pycache__/
+*.pyc
+
+# macOS files
 .DS_Store
+
+# VS Code settings
+.vscode/
+
+# Jupyter notebooks checkpoints
+.ipynb_checkpoints/
